--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <strong><a class="navbar-brand" href="https://openclassrooms.com/courses/developpez-avec-angular">Angular Blog App</a></strong>
+      <strong><a class="navbar-brand" href="https://openclassrooms.com/courses/developpez-avec-angular">OPC - Angular Blog App</a></strong>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
